--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
   "require" : {
-    "silex/silex": "^2.0.4",
     "monolog/monolog": "^1.22",
-    "symfony/twig-bridge": "^3"
+    "symfony/twig-bridge": "^5.4.31",
+    "symfony/http-foundation": "^5.4.50",
+    "symfony/http-kernel": "^5.4",
+    "symfony/event-dispatcher": "^5.4",
+    "symfony/routing": "^5.4",
+    "twig/twig": "^3.11.2"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
